[gd_scene load_steps=2 format=3 uid="uid://c35xfst0bmndp"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_vacw5"]

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vacw5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HostSessionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Session"

[node name="JoinSessionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Session"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="IPGetter" type="HTTPRequest" parent="."]
timeout = 10.0

[connection signal="pressed" from="VBoxContainer/HostSessionButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinSessionButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
